# django-pet

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml
blog/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
blog/fixtures/: initdata.json
blog/migrations/: 0001_initial.py  0002_post_author.py  0003_author_alter_post_author.py  0004_alter_post_category_alter_post_tags.py  0005_alter_post_author_post_views_delete_author.py
blog/templates/: analytics.html  index.html
blog/templates/post/: _article.html  _form.html  _list.html  all.html  category-posts.html  create.html  detail.html  edit.html  tag-posts.html
core/: settings.py  urls.py
core/templates/: 403.html  layout.html
core/templates/registration/: login.html
tests/: test_get_tags.py
utils/: get_tags.py
