[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Sergey Kuzmich <accounts@kuzmi.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
